@@ -2,8 +2,8 @@ Package: memisc
 Type: Package
 Title: Tools for Management of Survey Data and for the Presentation of
         Analysis Results
-Version: 0.99.14.2
-Date: 2017-09-08
+Version: 0.99.14.3
+Date: 2017-09-30
 Author: Martin Elff (with contributions from Christopher N. Lawrence, Dave Atkins, Jason W. Morgan, Achim Zeileis)
 Maintainer: Martin Elff <memisc@elff.eu>
 Description: One of the aims of this package is to make life easier for
@@ -26,6 +26,6 @@ URL:
         http://www.elff.eu/software/memisc/,http://github.com/melff/memisc/
 BugReports: http://github.com/melff/memisc/issues
 NeedsCompilation: yes
-Packaged: 2017-09-08 10:54:44 UTC; elff
+Packaged: 2017-09-30 15:24:23 UTC; elff
 Repository: CRAN
-Date/Publication: 2017-09-08 14:54:23 UTC
+Date/Publication: 2017-10-02 07:31:18 UTC
