@@ -190,7 +190,7 @@ CONTROL' 'NEW DEAL' 'MARSHALL PLAN' 'FIRM RUSSIAN POLICY' 'HELP ISRAEL
 (PALESTINE)' 'PROMOTE PEACE'</code></pre>
 <pre class="r"><code>print(nes1948)</code></pre>
 <pre><code>
-SPSS portable file '/tmp/Rtmp1NhAPT/file64e21601bbf3/NES1948.POR' 
+SPSS portable file '/tmp/Rtmp3TlPjR/file5a403b44e8d9/NES1948.POR' 
     with 67 variables and 662 observations</code></pre>
 <p>At this stage, the data are not loaded into the memory yet. But we can see which variables exist inside the data set:</p>
 <pre class="r"><code>names(nes1948)</code></pre>
