@@ -600,13 +600,7 @@ N
 </td>
 </tr>
 </table>
-<p>The results can be written into an HTML file using <code>write_html(mtable123,file=&quot;mtable123.html&quot;)</code> or the like. MS Word or LibreOffice can import such a file. An example HTML file can be found <a href="http://www.martin-elff.net/uploads/memisc/mtable123.html">here</a>. The file in docx format can be found <a href="http://www.martin-elff.net/uploads/memisc/mtable123.docx">here</a> and <a href="http://www.martin-elff.net/uploads/memisc/mtable123.odt">here</a> in open document format (odt).<a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a></p>
-</div>
-<div class="footnotes">
-<hr />
-<ol>
-<li id="fn1"><p>Unfortunately, LibreOffice currently seems to do a less than perfect job in importing HTML tables. The columns are a bit too wide and need to be adjusted by hand as do the skips after paragraphs. The example you find at the link mentioned above is thus manually adjusted.<a href="#fnref1">↩</a></p></li>
-</ol>
+<p>The results can be written into an HTML file using <code>write_html(mtable123,file=&quot;mtable123.html&quot;)</code> or the like. MS Word or LibreOffice can import such a file.</p>
 </div>
 
 
