@@ -1,7 +1,11 @@
+2017-09-30:
+	 - Included 'read_sysfile_slice' in 'CallMethods'
+	 - Removed some potentially stale links from vignette 'mtable-html'
+
 2017-09-08:
    - Empty cells in HTML tables (which break their formatting by 'pandoc' if included
 	   in markdown format files) are now avoided
-	
+
 2017-09-06:
    - Lines without contents from 'mtable()' results are now automatically dropped
    - Added support for additional statitics without standard errors in 'mtable()'
